--- a/index.html
+++ b/index.html
@@ -50,6 +50,83 @@
           </div>
         </div>
       </section>
+      <!-- Service section -->
+      <section class="service-container">
+        <div class="service-left-container">
+          <div class="service-details">
+            <button class="btn btn-service">Service List</button>
+            <h1 class="service-title">
+              <span class="primary-color">Services</span> We Can Help You With !
+            </h1>
+            <p class="service-subtitle">
+              Vero id posuere tempus aspernatur quaerat mollis voluptatum
+              eveniet porro viverra libero habitasse porro fames quos pharetra
+              diam cupidatat ligula! Netus! Quos dignissi mos laoreet.
+            </p>
+            <ol class="s-items">
+              <li class="s-item">
+                Nobis ridiculus cupiditate egestas commodi.
+              </li>
+              <li class="s-item">Ipsum dui curabitur dapibuish mollitia.</li>
+            </ol>
+            <div class="author">
+              <div class="author-details">
+                <img
+                  class="author-img"
+                  src="./asset/image/author.jpg"
+                  alt="author"
+                />
+                <h5>
+                  George Smith <br />
+                  <small>CEO, Director</small>
+                </h5>
+              </div>
+              <div class="details-btn">
+                <button class="btn btn-service">MORE DETAILS</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="service-right-container">
+          <div class="service-items">
+            <div class="service-item">
+              <img
+                class="service-logo"
+                src="./asset/icons/coding.png"
+                alt="code"
+              />
+              <h4 class="service-item-title">Website Development</h4>
+            </div>
+            <div class="service-item">
+              <img
+                class="service-logo"
+                src="./asset/icons/coding.png"
+                alt="code"
+              />
+              <h4 class="service-item-title">Website Development</h4>
+            </div>
+          </div>
+          <div class="service-items">
+            <div class="service-item">
+              <img
+                class="service-logo"
+                src="./asset/icons/coding.png"
+                alt="code"
+              />
+              <h4 class="service-item-title">Website Development</h4>
+            </div>
+            <div class="service-item">
+              <img
+                class="service-logo"
+                src="./asset/icons/coding.png"
+                alt="code"
+              />
+              <h4 class="service-item-title">Website Development</h4>
+            </div>
+          </div>
+          <!-- <div class="service-bottom-item"></div> -->
+        </div>
+      </section>
     </main>
   </body>
 </html>
