--- a/index.html
+++ b/index.html
@@ -127,6 +127,28 @@
           <!-- <div class="service-bottom-item"></div> -->
         </div>
       </section>
+      <!-- Appointment section -->
+      <section class="appointment-section">
+        <div class="phone-call">
+          <img
+            src="./asset/icons/phone-call.png"
+            alt="phone-call"
+            class="call-icons"
+          />
+          <div class="app-desc">
+            <h4 class="appointment-title">GET A FREE CONSULTATION</h4>
+            <h1 class="appointment-subtitle">987 233 0000</h1>
+          </div>
+        </div>
+        <div class="make-appointment">
+          <p class="make-title">
+            Vero id posuere tempus aspernatur quaerat mollis voluptatum eveniet
+            porro viverra libero habitasse Aut ab nibh aliqua optio veniet porro
+            viverr.
+          </p>
+        </div>
+        <button class="btn btn-service">MAKE APPOINTMENT</button>
+      </section>
     </main>
   </body>
 </html>
